# convert-searcheble-pdf-sample

./: README.md  convert_to_searchable_pdf_sapmle.py  pyproject.toml  requirements.txt
tests/: test_split_pdf.py
