[project]
name = "ocr-test"
version = "0.1.0"
description = "This project is created to inspect the accuracy of OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "boto3>=1.37.28",
    "google-cloud-documentai-toolbox>=0.14.2a0",
    "lxml>=5.3.2",
    "ocrmypdf>=16.10.1",
    "pymupdf>=1.25.5",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
